--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ flask-sqlalchemy==3.1.1
 sqlalchemy>=2.0.28
 flask-migrate==4.0.5
 flask-login==0.6.3
-# PostgreSQL for production deployment
-psycopg2-binary==2.9.6
+# Pure Python PostgreSQL driver instead of psycopg2 for better compatibility
+pg8000==1.30.5
 python-dotenv==1.0.0
 flask-wtf==1.2.1
 email-validator==2.1.0
