--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ flask-sqlalchemy==3.1.1
 sqlalchemy>=2.0.28
 flask-migrate==4.0.5
 flask-login==0.6.3
-# PostgreSQL drivers - keeping both for compatibility
+# Pure Python PostgreSQL driver - using pg8000 which is compatible with Python 3.13
 pg8000==1.30.5
-psycopg2-binary==2.9.9
+# Removed psycopg2-binary due to compatibility issues with Python 3.13 on Railway
 python-dotenv==1.0.0
 flask-wtf==1.2.1
 email-validator==2.1.0
