--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,6 @@ click==8.1.7
 itsdangerous==2.1.2
 jinja2==3.1.3
 markupsafe==2.1.3
+flask-caching==2.1.0
 # Deployment dependencies
 gunicorn==21.2.0
